# lector

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.local.yml  package-lock.json  package.json  proxy.ts
ai/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
ai/.sqlx/: query-045d1d32efa1da3b94c5ee2de493d654e2617af883e5cb349f3b3131f18420c2.json  query-056f7b48e4842ca8eb3c41b2784638d8de0f15e148d58fdf2847cb28382e6be2.json  query-0ab284e07c2886152d12223621d1b5fe87c08228c63a2952d06907c7c628fee4.json  query-1680483647ed819798c4e3d0f9643ff4ef21e746de6c512506c067ef3ac67d97.json  query-243a13c10cfc0f76c8bfd84da3c4b8b57a62644bae8a9c41ed64ba34e78d1ca7.json  query-36064ea759a028f16498a7f2e37867b64d6b7591674dea61cf305b0ace23b8e6.json  query-3e07c8094149d11dec9f3af8a0af7fc8511fadc79f225a77b9d869b8507b2be6.json  query-3f88f85e58f8c5e4372f2c2fb7d7c04a35a35a0cc73e281e9fe7e9d60d282cd2.json  query-55126edeaadd9c29fefe3ced246cc726502bdaf5429efc0c0267e339b954bfd3.json  query-57f440b556bb2d2c4cabbce108b7c1659ee13261f5af49a8ee7dfe131d493b32.json  query-62c251dc2158b2e4cb4226927af01b8d47a7005302c1f3956009c4883f0e9e2a.json  query-8be6af8e35f78913b0b224d07633d52b85e62d3f43e09296761f87e1521f550c.json  query-8ebe307dbb9f743931d712a369ac2a666fd4629ee1583d11cf8c2604017c9ebe.json  query-981b62ee09943ae87d4f7d06d58c34a2b471cff8a1d49cc0d911ffe4c6f23371.json  query-a84e978845186b9d5cb213772e2dad46e2bd7e94dc444b6d6ea6a693fda8d2c7.json  query-af9a538b1832bbe8baa02ccca97709b3efb8c2b3de77fdcb69b619c86085b539.json  (+10 more)
ai/migrations/: 20241107000000_init.sql  (+4 more)
ai/src/: auth.rs  (+3 more)
(+47 files in other folders)
