[package]
name = "lector"
version = "0.1.0"
edition = "2024"

[dependencies]
# Rig Framework
rig-core = "0.35.0"
rig-qdrant = "0.2.4"

# Web Server
actix-web = "4.13.0"
actix-web-httpauth = "0.8.2"
actix-cors = "0.7.1"

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }

# Async & Utils
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
bcrypt = "0.19.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
qdrant-client = "1.17.0"
reqwest = { version = "0.13.2", features = ["json"] }
